--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "projects",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://GaiSawant.github.io/projects",
+  "homepage": "http://gaeastorm.github.io/projects",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
